# cortex

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
cortex/: __init__.py  config.py  filelock_compat.py  llm_adapter.py
cortex/classifiers/: memory_classifier.py
cortex/hooks/: auto_learning.py  correction_detector.py  gate.py  memory_awareness.py  stop_learning_extractor.py
cortex/scripts/: install.py
cortex/store/: __init__.py  memory_cache.py  memory_store.py
docs/: comparison.md  configuration.md  how-it-works.md
examples/: aliases.json  core_tagged.jsonl  memory_log.jsonl  settings.json
scripts/: install.sh  uninstall.sh
